# FileSystemWatcher

./: CMakeLists.txt  controller.cpp  controller.h  event.cpp  event.h  eventtablemodel.cpp  eventtablemodel.h  main.cpp  main.qml  mywatcher.cpp  mywatcher.h
